# safeway-coupons

./: .cruft.json  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  Jenkinsfile  README  README.md  create-config  docker-compose.accounts-config.yaml  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml  pyproject.toml.rej  requirements.txt  run  safeway-coupons
.github/workflows/: cd.yml  ci.yml  container.yml
.github/workflows/actions/python-poetry/: action.yml
AzureFunctions/: .gitignore
AzureFunctions/ClipCoupons/: __init__.py  function.json  safeway_coupons.py
docker/: entrypoint
safeway_coupons/: __init__.py  __version__.py  account.py  accounts.py  api_client.py  app.py  chrome_driver.py  client.py  config.py  email.py  errors.py  main.py  methods.py  models.py  safeway.py  session.py  utils.py
tests/: conftest.py  test_app.py  test_module.py  test_safeway.py  utils.py
