[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "safeway-coupons"
version = "0.0.0"
description = "Automatic coupon clipper for Safeway's online \"Safeway for U\" coupons"
license = "GPL-3.0-or-later"
authors = ["Stephen Kent <smkent@smkent.net>"]
readme = "README.md"
repository = "https://github.com/smkent/safeway-coupons"
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.8"
dataclasses-json = "^0.5.7"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
bandit = "*"
black = "*"
cruft = "*"
flake8 = "*"
flake8-bugbear = "*"
flake8-pyproject = "*"
flake8-simplify = "*"
isort = "*"
mypy = "*"
pep8-naming = "*"
poethepoet = "*"
pytest = "*"
pytest-cov = "*"
pytest-github-actions-annotate-failures = "*"
pytest-sugar = "*"
tox = "*"
types-requests = "^2.28.9"
pytest-mock = "^3.8.2"
responses = "^0.21.0"

[tool.poetry.scripts]
safeway-coupons = "safeway_coupons.app:main"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.poe.env]
PROJECT_CODE_DIRS="safeway_coupons/ tests/"

[tool.poe.tasks]
flake8 = { cmd = "flake8", help = "Check code style with flake8" }
mypy = { cmd = "mypy", help = "Check types with mypy" }
pytest = { cmd = "pytest", help = "Run unit tests with pytest" }

[tool.poe.tasks.cookie]
shell = """
    set -e
    git checkout -b update-cookie
    git reset --hard origin/main
    before_ref=$(python -c 'import json; print(json.load(open(".cruft.json"))["commit"])')
    cruft update -y
    after_ref=$(python -c 'import json; print(json.load(open(".cruft.json"))["commit"])')
    poetry lock --no-update
    git add .cruft.json poetry.lock
    (
        echo "Apply updates from upstream project template"
        echo
        echo "Applied upstream commits:"
        echo
        echo "https://github.com/smkent/cookie-python/compare/${before_ref}...${after_ref}"
    ) | git commit -F -
"""
help = "Apply upstream project template updates"

[tool.poe.tasks.bandit]
cmd = "bandit -c pyproject.toml -q -r $(echo \"${PROJECT_CODE_DIRS}\" | sed 's:tests/::')"
help = "Perform security analysis with bandit"

[tool.poe.tasks.black]
cmd = "black -l 79 --check --diff --color -- ${PROJECT_CODE_DIRS}"
help = "Check code formatting with black"

[tool.poe.tasks.black_lint]
cmd = "black -l 79 -- ${PROJECT_CODE_DIRS}"
help = "Reformat code with black"

[tool.poe.tasks.isort]
cmd = "isort --check-only --diff -- ${PROJECT_CODE_DIRS}"
help = "Check imports order with isort"

[tool.poe.tasks.isort_lint]
cmd = "isort -- ${PROJECT_CODE_DIRS}"
help = "Reformat code with black"

[tool.poe.tasks.lt]
sequence = ["lint", "test"]
help = "Run all linters and all tests"

[tool.poe.tasks.lint]
sequence = ["isort_lint", "black_lint"]
help = "Run linters"

[tool.poe.tasks.test]
sequence = ["flake8", "isort", "black", "mypy", "bandit", "pytest"]
help = "Run all tests"

[tool.bandit]
skips = ["B101"]  # assert_used

[tool.coverage.run]
source = ["safeway_coupons"]

[tool.coverage.report]
fail_under = 0
show_missing = true

[tool.cruft]
skip = [".git"]

[tool.flake8]
exclude = "./.*"

[tool.isort]
atomic = true
profile = "black"
line_length = 79

[tool.mypy]
files = [ "tests", "safeway_coupons" ]
mypy_path = "types"
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = """\
    --cov \
    --cov-append \
    --cov-report term \
    --cov-report xml:.pytest_coverage.xml \
    --junitxml=.pytest_results.xml \
"""

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py310
isolated_build = True
requires =
    tox-poetry-installer[poetry] == 0.6.0

[testenv]
deps =
    poetry
commands =
    poetry install
    poetry run poe test

[gh-actions]
python =
    3.10: py310
"""

# vim: ft=cfg
